--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.3.0-alpha2",
     "bootstrap-icons": "^1.10.3",
+    "dotenv": "^16.0.3",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
