--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,10 @@
     "bootstrap-icons": "^1.10.3",
     "dotenv": "^16.0.3",
     "http-proxy-middleware": "^2.0.6",
+    "local-storage-helper": "^1.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helper": "^5.0.1",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.9",
