--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
     "jsonwebtoken": "^9.0.0",
+    "local-storage-helper": "^1.2.5",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "react-helper": "^5.0.1"
   }
 }
