--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.3.0-alpha2",
     "bootstrap-icons": "^1.10.3",
+    "classnames": "^2.3.2",
     "dotenv": "^16.0.3",
     "http-proxy-middleware": "^2.0.6",
     "local-storage-helper": "^1.2.5",
