--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.22",
-    "react-helper": "^5.0.1"
+    "react-helper": "^5.0.1",
+    "sharp": "^0.32.0"
   }
 }
